--- a/Source/MacPatch/MacPatch/MacPatch/Preferences/PrefsUpdatesVC.xib
+++ b/Source/MacPatch/MacPatch/MacPatch/Preferences/PrefsUpdatesVC.xib
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="18122" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="18122"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PrefsUpdatesVC">
             <connections>
                 <outlet property="allowInstallRebootPatchesCheckBox" destination="xFi-8d-Uei" id="XLj-gS-eMK"/>
+                <outlet property="authRestartClearButton" destination="OEC-yQ-4Ec" id="uS9-od-QA3"/>
+                <outlet property="authRestartSetupButton" destination="mt8-gd-Dx6" id="swG-If-ipV"/>
                 <outlet property="authState" destination="jfY-EO-HMA" id="mTG-cp-Ce7"/>
                 <outlet property="pausePatchingCheckBox" destination="fkL-p0-oKI" id="JhD-Wu-Ytg"/>
                 <outlet property="preStageRebootPatchesBox" destination="I19-Dk-aer" id="HNK-To-bmY"/>
